Fixed body scrolling issue on ios

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@ body, html {
   scroll-behavior: smooth;
   height: 100%;
   font-size: 16px !important;
+  -webkit-overflow-scrolling: touch;
 }
 
 section {
